 - Added ZWave.Me iTemp Config file thanks to Willem Burgers (Justin)
 - Added new id for Aeon Labs Micro Smart Engergy Illuminator G2 thanks to
   jmeyer (Justin)
 - Fixed Issue 329 - Update Fibaro FGD211 Config File (Alex)
 - Fixed Issue 330 - Update Fibaro FGS211 Config File (Alex)
 - Fixed Issue 331 - Update Fibaro RGBWM441 Config File (Alex)
 - Add new id for GE Duplex Receptacle (Alex) 
 - Add 18 new ids for Vision devices (Alex)
 - Add Device Qees RETO Plug-in Switch Plus Config File (Alex)
 - Implement DoorLockLogging Command Class (Justin)
 - Implement Security Command Class (Justin)
 - Add a additional ID for Vision ZM1701 Deadbolt without Handle (Justin)
 - Add a ID and Config file for Assa Abloy Real Living Cap-Touch Deadbolt
   (Justin)
 - Implement the TimeParameters Command Class (Justin)
 - Fix up AssumeAwake Option for the Wakeup Class (Justin)
 - Update BeNext Tag Reader Config File (Alex)
 - Fixed Issue 335 - Update zwave.me KeyFob Config File (Alex)
 - Fixed Issue 336 - Update Aeon Labs DoorSensor Config File (Alex)
 - Fixed Issue 337 - Update Aeon Labs Multi Sensor Config File (Alex)
 - Fixed Issue 338 - Update Aeon Labs Multi Sensor Config File (Alex)
 - Fixed Issue 339 - Update Fibaro Door Opening Sensor Config File (Alex)
 - Fixed Issue 340 - Add Remotec ZRC-100 Remote Control (Alex)
 - Fixed Issue 301 - Add Philio PAN04-1 Relay Insert (Alex)
 - Fixed Issue 341 - Corrected directory/filename errors in manufacturer xml (Alex)
 - Fixed Issue 342 - Added 4 Qubino devices thanks to jeanfrancois (Alex) 
 - Fixed Issue 345 - Added new ids for Fibaro FGK101 and FGBS001 (Alex)
 - Fixed Issue 351 - Added new ids for Vision VS6301 and updated Product Name (Justin)
 - Fixed Issue 348 - Typo in Config Index Number for zwave.me ZME_06436 (Justin)
 - Fix Several Warnings/Initilizers etc (Justin)
 - Fixed Issue 357 - Fixed Qubino manufacturer id from 345 (dec) to 159 (hex) (Alex)
 - Fixed Issue 356 - New ID for Fibaro FGMS001 (Alex) 